--- a/LR-1/requirements.txt
+++ b/LR-1/requirements.txt
@@ -4,11 +4,13 @@ contourpy==1.3.0
 cycler==0.12.1
 debugpy==1.8.6
 decorator==5.1.1
+exceptiongroup==1.2.2
 executing==2.1.0
 fonttools==4.54.1
 ipykernel==6.29.5
 ipython==8.27.0
 jedi==0.19.1
+joblib==1.4.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.7
@@ -29,8 +31,12 @@ Pygments==2.18.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 pyzmq==26.2.0
+scikit-learn==1.5.2
+scipy==1.14.1
 six==1.16.0
 stack-data==0.6.3
+threadpoolctl==3.5.0
 tornado==6.4.1
 traitlets==5.14.3
+typing_extensions==4.12.2
 wcwidth==0.2.13
